--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,15 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 eframe = "0.11.0" # Gives us egui, epi and web+native backends
 image = "0.23"
-serde = { version = "1", features = ["derive"], optional = true }
+serde = { version = "1", features = ["derive"] }
 bitvec = "0.22"
+serde_json = "1.0"
+wasm-bindgen = "0.2"
 
 [features]
 default = []
 http = ["eframe/http"] # Enable if you want to do http requests
-persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
+persistence = ["eframe/persistence"] # Enable if you want to persist app state on shutdown
 
 [profile.release]
 opt-level = 2 # fast and small wasm
