--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,16 +10,25 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-eframe = "0.11.0" # Gives us egui, epi and web+native backends
-image = "0.23"
+eframe = "0.19" # Gives us egui, epi and web+native backends
+image = "0.24"
 serde = { version = "1", features = ["derive"] }
-bitvec = "0.22"
+bitvec = "1"
 serde_json = "1.0"
-wasm-bindgen = "0.2"
+wasm-bindgen = "0.2.83"
+
+# native:
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tracing-subscriber = "0.3"
+
+# web:
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = "0.1.6"
+tracing-wasm = "0.2"
 
 [features]
 default = []
-http = ["eframe/http"] # Enable if you want to do http requests
+# http = ["eframe/http"] # Enable if you want to do http requests
 persistence = ["eframe/persistence"] # Enable if you want to persist app state on shutdown
 
 [profile.release]
