--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde = { version = "1", features = ["derive"] }
 bitvec = "1"
 serde_json = "1.0"
 wasm-bindgen = "0.2.83"
+once_cell = "1.16.0"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
@@ -30,6 +31,7 @@ tracing-wasm = "0.2"
 default = []
 # http = ["eframe/http"] # Enable if you want to do http requests
 persistence = ["eframe/persistence"] # Enable if you want to persist app state on shutdown
+slow_tests = []
 
 [profile.release]
 opt-level = 2 # fast and small wasm
