--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "egui Template PWA",
-  "short_name": "egui-template-pwa",
+  "name": "Burnside Calculator",
+  "short_name": "burnside-calc-pwa",
   "icons": [
     {
       "src": "./icon-256.png",
